Messages no longer stretch the message box or go outside of it

--- a/app/frontend/page/css/style.css
+++ b/app/frontend/page/css/style.css
@@ -29,6 +29,7 @@ body {
 }
 
 .msg-form {
+  flex-shrink: 0;
   box-shadow: none;
 }
 
@@ -46,18 +47,27 @@ body {
 }
 
 .msg-container {
+  display: flex;
   word-wrap: break-word;
   text-align: left;
   padding: 20px;
   float: right;
   width: 70%;
   min-height: 100vh;
+  max-height: 100vh;
   border: 2px solid var(--txt-color);
   transition: border 0.5s ease;
   box-sizing: border-box;
+  flex-direction: column;
 }
 
 .msg-list {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
   list-style-type: none;
+  overflow: hidden;
   padding-left: 5px;
+  margin-bottom: 10px;
+  justify-content: flex-end;
 }
